--- a/files/main.css
+++ b/files/main.css
@@ -44,3 +44,13 @@ img.logo-left {
 .bigger-address h4 {
   font-size: larger;
 }
+
+p.main-text {
+  text-align: justify;
+  font-size: 16px;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
+p.main-text + p.lead {
+  margin-top: 22px;
+}
